yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-morty
  labels:
    app: rick-morty
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rick-morty
  template:
    metadata:
      labels:
        app: rick-morty
    spec:
      containers:
        - name: rick-morty
          image: rick-morty:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
